Update admin function, css, db, images, header

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4496,7 +4496,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #006db6;
+  background-color: #fff;
   border-color: #fff;
 }
 .navbar-default .navbar-brand {
