--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ img {
 	font-size:16px;
 }
 .header-bottom-w3ls {
-    background: #006db6;
+    background: #fff;
 	padding:10px 0;
 }
 .navbar-default {
@@ -183,7 +183,7 @@ button.search {
     height: 43px;
     outline: none;
     box-shadow: none;
-    background:#006db6;
+    background:#fff;
     padding: 0;
     border-radius: inherit;
     -webkit-appearance: none;
@@ -239,7 +239,7 @@ button.w3view-cart:focus{
 	font-size:35px;
 	text-align:left;
 	margin-top:18%;
-	color: #006db6;
+	color: #fff;
 }
 .banner-agile h3{
 	font-size:50px;
@@ -249,7 +249,7 @@ button.w3view-cart:focus{
 	font-weight:700;
 }
 .banner-agile h3 span{
-	color:#006db6;
+	color:#fff;
 }
 .banner-agile p{
 	width:49%;
@@ -267,7 +267,7 @@ button.w3view-cart:focus{
 	margin-top:20px;
 }
 .banner-agile a:hover{
-	background:#006db6;
+	background:#fff;
 }
 /*--//banner--*/
 
@@ -613,7 +613,7 @@ button.w3ls-cart.pw3ls-cart .fa{
   left: 15px;
   right: 15px;
   bottom: 0;
-  background:#006db6;
+  background:#fff;
   -webkit-transform: scale(0);
   transform: scale(0);
   -webkit-transition-property: transform;
@@ -687,12 +687,12 @@ ul.wmuSliderPagination {
 	border-radius:50%;
 }
 .wmuSliderPagination a.wmuActive {
-	background: #006db6;
-    box-shadow: 0px 0px 10px #006db6;
-	-webkit-box-shadow: 0px 0px 10px #006db6;
-	-moz-box-shadow: 0px 0px 10px #006db6;
-	-o-box-shadow: 0px 0px 10px #006db6;
-	-ms-box-shadow: 0px 0px 10px #006db6;
+	background: #fff;
+    box-shadow: 0px 0px 10px #fff;
+	-webkit-box-shadow: 0px 0px 10px #fff;
+	-moz-box-shadow: 0px 0px 10px #fff;
+	-o-box-shadow: 0px 0px 10px #fff;
+	-ms-box-shadow: 0px 0px 10px #fff;
 }
 /* Default Skin */
 .wmuGallery .wmuGalleryImage {
@@ -779,7 +779,7 @@ ul.wmuSliderPagination {
     padding: 10px 0;
     width: 15%;
     border: none;
-	background-color: #006db6;
+	background-color: #fff;
 	color:#fff;
 }
 .w3agile_newsletter_right input[type="submit"]:hover{
@@ -858,7 +858,7 @@ ul.wmuSliderPagination {
 	color:#000;
 }
 .footer ul li a:hover{
-	color:#006db6;
+	color:#fff;
 }
 p.copy-right{
 	margin-top:40px;
@@ -1001,12 +1001,12 @@ p.sbmincart-empty-text {
 	-o-border-radius: 10px;
 	-ms-border-radius: 10px;
     border-radius: 10px;
-    background: #006db6;
-	-moz-box-shadow: inset 0 0 6px #006db6;
-	-o-box-shadow: inset 0 0 6px #006db6;
-	-ms-box-shadow: inset 0 0 6px #006db6;
-    -webkit-box-shadow: inset 0 0 6px #006db6;
-	box-shadow: inset 0 0 6px #006db6; 	
+    background: #fff;
+	-moz-box-shadow: inset 0 0 6px #fff;
+	-o-box-shadow: inset 0 0 6px #fff;
+	-ms-box-shadow: inset 0 0 6px #fff;
+    -webkit-box-shadow: inset 0 0 6px #fff;
+	box-shadow: inset 0 0 6px #fff; 	
 } 
 /*-- //cart-css --*/ 
 
@@ -1022,7 +1022,7 @@ p.sbmincart-empty-text {
 }
 .w3ls_dresses_grid_left_grid h3:before {
     content: '';
-    background: #006db6;
+    background: #fff;
     width: 10%;
     height: 2px;
     position: absolute;
@@ -1132,7 +1132,7 @@ p.sbmincart-empty-text {
 	outline:none;
 }
 .contact input[type="submit"] {
-   background: #006db6;
+   background: #fff;
     padding: 8px 15px;
     outline: none;
 	margin-top:10px;
@@ -1156,7 +1156,7 @@ p.sbmincart-empty-text {
 /*-- about --*/
 .about h4 {
     font-size: 2.2em;
-    color: #006db6;
+    color: #fff;
     text-align: left;
 }
 .about img {
@@ -1203,7 +1203,7 @@ p.sbmincart-empty-text {
 }
 /*-- about-gallery --*/
 .about-w3ls-row {
-    background:#006db6;
+    background:#fff;
     margin-right: 5em;
     padding:1.5em;
 }
@@ -1263,12 +1263,12 @@ p.sbmincart-empty-text {
 .nbs-flexisel-nav-left {
     left: 0;
     background: url(../images/img-sprite.png) no-repeat 5px center;
-    background-color:#006db6;
+    background-color:#fff;
 }
 .nbs-flexisel-nav-right { 
 	right: 0%;
     background: url(../images/img-sprite.png) no-repeat -20px center;
-    background-color: #006db6;
+    background-color: #fff;
 }
 /*-- //about --*/
 /*-- products --*/
@@ -1377,7 +1377,7 @@ p.sbmincart-empty-text {
 }
 .about-bottom  a{
 	padding:8px 20px;
-	background:#006db6;
+	background:#fff;
 	color:#fff;
 	float:right;
 }
@@ -1542,7 +1542,7 @@ a.pa_italic:focus {
 .single-top-right h3 {
     text-transform: capitalize;
     font-size: 2em;
-    color: #006db6;
+    color: #fff;
     margin-bottom: .3em;
     text-align: left;
 }
@@ -1621,11 +1621,11 @@ p.single-price-text {
 .single-top-right .w3ls-cart.w3ls-cart-like {
     margin-left: 1em;
     background: none;
-    border: 1px solid  #006db6;
-    color: #006db6;
+    border: 1px solid  #fff;
+    color: #fff;
 }
 .single-top-right .w3ls-cart.w3ls-cart-like:hover{ 
-    background:  #006db6;
+    background:  #fff;
     color: #fff;
 } 
 .single-page-icons.social-icons {
@@ -1657,7 +1657,7 @@ p.single-price-text {
 	position:relative;
 }
 .collpse.tabs .panel-default {
-    border-color: #006db6;
+    border-color: #fff;
 }
 .collpse.tabs .panel-body {
 	padding: 15px;
@@ -1667,7 +1667,7 @@ p.single-price-text {
 }
 .collpse.tabs .panel-default > .panel-heading {
     padding: 0;
-    background: #006db6;
+    background: #fff;
 } 
 .pa_italic span.fa-arrow{
     display: none;
@@ -1780,7 +1780,7 @@ p.single-price-text {
     background: none;
 }
 .form-w3agile input[type="submit"] {
-    background: #006db6;
+    background: #fff;
     color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
@@ -1875,7 +1875,7 @@ a.at-in{
     padding: 7px 10px;
     width: auto;
     font-size: 1em;
-    background: #006db6;
+    background: #fff;
 }
 .add-1:hover {
     text-decoration: none;
@@ -2352,7 +2352,7 @@ p.w3-agile{
 	}
 	.navbar-toggle {
 		border-radius: 0;
-		background:#006db6;
+		background:#fff;
 		float:none;
 		transition: 0.5s all;
 		-webkit-transition: 0.5s all;
@@ -2824,7 +2824,7 @@ p.w3-agile{
 		font-size: 1.8em;
 	}
 	.about-w3ls-row {
-		background: #006db6;
+		background: #fff;
 		padding: 1em;
 	}
 	.w3agile_newsletter_left, .w3agile_newsletter_right {
